@startuml
'https://plantuml.com/class-diagram'
left to right direction
!define LIGHTBLUE
!includeurl https://raw.githubusercontent.com/Drakemor/RedDress-PlantUML/master/style.puml

class Agente{
    -estado : State
    -Q : float64[][]
    -playing : bool

    +Agente(entorno : FrozenLake, controlador : Controlador) : Agente
    +set_politica(politica : Politica) : void
    +readonly_Q() : float64[][]
    +toggle_play() : void

}

class QLearningBundle{
   +n_episodio : Integer
   +recompensa_media : float64
   +historial_recompemsas : float64[]
}

class qlearning{
    +callback_entrenamiento_inicio_paso
    +callback_entrenamiento_fin_paso
    +callback_entrenamiento_recompensa
    +callback_entrenamiento_exito
    ..callbacks..
    +callback_ejecucion_inicio_ejecucion
    +callback_ejecucion_fin_ejecucion
    --
    +ejecutar(agente : Agente) : float64
    +reset(agente : Agente) : float64
    +entrenar(alpha : float64, gamma : float64, episodios : Integer, recompensa_media : float64, n_episodios_media : Integer, agente : Agente, modificar_recompensa=True : bool)
}

qlearning --> QLearningBundle

Agente --> FrozenLake: -entorno
Agente --> Controlador: -controlador
Agente --> Politica: -politica

class Controlador{
    -alpha : float64
    -gamma : float64
    -variable_param_1 : float64
    -variable_param_2 : float64

    +Controlador(algoritmo_base : Type[Politica]) : Controlador
    +start()
    +registrar_algoritmo(clase : Type[Politica], recargarDropdown=True : bool) : void
    -entrenar() : void
    -resolver() : void
}

QObject <|--Controlador
Controlador --> FrozenLake : -entorno
Controlador --> ThreadEjecucion : -threadEjecucion
Controlador --> ThreadEntrenamiento : -threadEntrenamiento
Controlador --> ThreadBenchmark : -threadBenchmark
Controlador --> VentanaPrincipal : -vista
Controlador --> VentanaBenchmark : -vista_benchmark
Controlador --> VentanaMetricasPyqtgraph : -vista_metricas
Controlador --> VentanaAjustesBenchmark : -vista_ajustes_benchmark

class EntornoWidget{
    tamano : String

    +configurar(tamano : Integer, agente : Agente
    -paintEvent(e : QPaintEvent)
}

QWidget <|-- EntornoWidget
EntornoWidget o-- Agente: -agente

class FrozenLake{
    +observation_space : Space
    +action_space : Space

    +make() : FrozenLake
    +mapas() : String[]
    +nombres_mapas() : String[]
    +reset() : Object, float, bool, dict
    +step() : Object, float, bool, dict
    +close() : void
    +render() : void
    +get_mapa() : String[][]
}

Env --o FrozenLake : -frozen_lake

abstract class Politica{
    -parametro : float64
    -variacion_parametro : float64
    -variacion_habilitada : bool


    +Politica(agente : Agente, parametro : float64, variacion_parametro : float64, semilla_random : Integer) : Politica
    +inicializar_q(**kwargs) : void
    +actualizar_q(accion : Integer, estado_siguiente : State, reocmpensa : float64, alpha : float64, gamma : float64): void
    +habilitar_variacion(habilitada=True : bool) : void
    +{abstract} variar_parametro()
    +{abstract} seleccionar_accion()
    +{abstract} get_nombre()
    +{abstract} get_nombres_parametros()
    +{abstract} get_parametros_default()
    +get_rango_parametros()

}

ABC <|-- Politica
Politica --> Agente : -agente

class EpsilonGreedy{
    +EpsilonGreedy(agente : Agente, epsilon : float64, decaimiento_epsilon : float64, semilla_random : Integer) : Politica
    +actualizar_q(accion : Integer, estado_siguiente : State, reocmpensa : float64, alpha : float64, gamma : float64): void
    +variar_parametro()
    +seleccionar_accion()
    +get_nombre()
    +get_nombres_parametros()
    +get_parametros_default()

}

Politica <|-- EpsilonGreedy

class SoftMax{
    +SoftMax(agente : Agente, t : float64, decremento_t : float64, semilla_random : Integer) : Politica
    +actualizar_q(accion : Integer, estado_siguiente : State, reocmpensa : float64, alpha : float64, gamma : float64): void
    +variar_parametro()
    +seleccionar_accion()
    +get_nombre()
    +get_nombres_parametros()
    +get_parametros_default()
    +get_rango_parametros()
    -softmax(q_estado:float64[],t)

}
Politica <|-- SoftMax

class UpperConfidenceBound{
    +UpperConfidenceBound(agente : Agente, H : float64, T : float64, semilla_random : Integer) : Politica
    +inicializar_q(**kwargs)
    +actualizar_q(accion : Integer, estado_siguiente : State, reocmpensa : float64, alpha : float64, gamma : float64): void
    +variar_parametro()
    +seleccionar_accion()
    +get_nombre()
    +get_nombres_parametros()
    +get_parametros_default()
    +get_rango_parametros()
}

Politica <|-- UpperConfidenceBound

class SignalBuffer{
    -sig : pyqtSignal
    -frecuencia_max : float64
    -param_buffer : list

    +SignalBuffer(sig : pyqtSignal, frecuencia_max : float64, n_args=0 : Integer)
    +emit(*params) : bool
    +flush() : void
}

class ThreadEntrenamiento{
    +sig_actualizar_vista : pyqtSignal
    +sig_print : pyqtSignal
    +sig_plot : pyqtSignal
    +sig_fin_entrenamiento : pyqtSignal
    --
    -tiempo_espera : float64
    -alpha : float64
    -gamma : float64
    --
    ThreadEntrenamiento(controlador : Controlador, agente : Agente, alpha : float64, gamma : float64, episodios : Integer, recompensa_media : float64, n_episodios_media : Integer) : ThreadEntrenamiento
    +run() : void
    -actualizar_vista()
}

QThread <|--ThreadEntrenamiento
ThreadEntrenamiento o-- Controlador : -controlador
ThreadEntrenamiento o-- Agente : -agente
ThreadEntrenamiento --> SignalBuffer : -sig_buf
ThreadEntrenamiento --> SignalBuffer : -plot_buf


class ThreadEjecucion{
    +sig_actualizar_vista : pyqtSignal
    +sig_print : pyqtSignal
    --
    -tiempo_espera : float64
    --
    ThreadEntrenamiento(controlador : Controlador, agente : Agente) : ThreadEjecucion
    +run() : void
    -actualizar_vista()

}

QThread <|--ThreadEjecucion
ThreadEjecucion o-- Controlador : -controlador
ThreadEjecucion o-- Agente : -agente
ThreadEjecucion --> SignalBuffer : sig_buf

class ThreadBenchmark{
    -sig_actualizar_benchmark : pyqtSignal
    --
    -episodios : Integer
    -ajustes : dict
    -n_ejecuciones : Integer
    -recompensa_media : float64
    -n_episodios_media : float64
    --
    +ThreadBenchmark(entorno : FrozenLake, controlador : Controlador, politicas : Politica[], episodios : Integer, ajustes_dict : dict, recompensa_media=0.78 : float64, n_episodios_media=100 : Integer)
    +run() : void
    -fin_ejecucion(**kwargs)
}

QThread <|--ThreadBenchmark
ThreadBenchmark --> FrozenLake : -entorno
ThreadBenchmark o-- Controlador : -controlador
ThreadBenchmark o-- Agente : -agente
ThreadBenchmark --> "many" Politica : -politicas

class VentanaPrincipal{
    +VentanaPrincipal(tamano : Integer, agente : Agente, pantalla : Tuple) : VentanaPrincipal
    +cambiar_entorno(tamano : Integer, agente : Agente) : void
}

QMainWindow <|-- VentanaPrincipal
VentanaPrincipal *--EntornoWidget : -entorno

class VentanaMetricasPyqtgraph{
    -plot_data_x : dict
    -plot_data_y : dict
    -lista_algoritmos : String[]

    +VentanaMetricasPyqtgraph(lista_algoritmos : Stirng[]) : VentanaMetricasPyqtgraph
    +add_plot_data(x : float64[], y: float64[], alg_name : String) : void
    -plot(x : dict, y : dict, alg_name : String, color : Tuple, tiempo_entre_updates=150 : Integer) : void
}

QMainWindow <|-- VentanaMetricasPyqtgraph
VentanaMetricasPyqtgraph o--PlotWidget : -graphWidget

class VentanaBenchmark{
    -lista_algoritmos : String[]

    +VentanaBenchmark(lista_aloritmos : String[], ajustes : dict, entorno : FrozenLake, controlador : Controlador) : VentanaBenchmark
    +init_grafico() : void
    +actualizar_grafico(algoritmo : String, nuevo_dato : Integer) : void
    +limpiar_grafico() : void
    +formatear_titulo_grafico(n:n_ejecuciones : Integer) : void
    +closeEvent(event : QCloseEvent) : void
}

QMainWindow <|-- VentanaBenchmark
VentanaBenchmark --> FrozenLake : -entorno
VentanaBenchmark --> Controlador : -controlador
VentanaBenchmark o-- QChart : -grafico


class VentanaAjustesBenchmark{

    +VentanaAjustesBenchmark(controlador : Controlador, ajustes : QSettings, instancias_algoritmos : Politica[]) : VentanaAjustesBenchmark
    -CloseEvent(event : QCloseEvent) : void
    -restablecer() : void
}
QWidget <|-- VentanaAjustesBenchmark
VentanaAjustesBenchmark o-- Controlador : -controlador
VentanaAjustesBenchmark o-- "many" Politica : -instancias_algoritmos

@enduml